# Skakavi-krompir

./: .gitignore  GEMINI.md  MODDING.md  README.md  TESTING.md  achievements.py  build.bat  build.sh  build_web.sh  buildozer.spec  dependencies.py  fake_player.py  gui.py  index.html  io.github.Pavle012.Skakavi-krompir.desktop  io.github.Pavle012.Skakavi-krompir.metainfo.xml  io.github.Pavle012.Skakavi-krompir.yml  io.github.Pavle012.SkakaviKrompir.metainfo.xml  main.py  meson.build  modloader.py  multiplayer.py  namecheck.py  options.py  powerups.py  pygame_ui.py  release.sh  replays.py  requirements.txt  scores.py  settings.py  settings.txt  skakavi-krompir.sh.in  test_kivy_exit.py  updater.bat  updater.py  updater.sh
.github/ISSUE_TEMPLATE/: Bug.yaml  Feature request.yaml
.github/ISSUE_TEMPLATES/: Bug.yaml
.github/workflows/: android.yml  build.yml  buildalpha.yml  buildontag.yml  test.yml  tests.yml
assets/: powerups.json
brain/9e373ed3-61d7-4d3b-a3f0-fe4bf5bcf2f6/: task.md
example skmod/: helper.py  main.py  mod.json
kivy_game/: __init__.py  achievements.py  main.py  namecheck.py  options.py  particles.py  powerups.py  replays.py  scores.py
mods/: example.py
original/: achievements.py  main.py  options.py  particles.py  pygame_ui.py  replays.py  scores.py
shared/: dependencies.py  fake_player.py  gui.py  modloader.py
tests/: test_dependencies.py  test_modloader.py  test_scores.py  test_updater.py
